fixed the header, added logo, and header;'s height to prevent covering titles

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,43 @@ body {
     background: #7cc4a8;
 }
 
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 0.8rem 5% 1rem;
+    backdrop-filter: blur(10px);
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    /* Centers them horizontally */
+    justify-content: space-between;
+    /* Centers them vertically */
+    align-items: center;
+    z-index: 5;
+}
+
+.logo {
+    color: black;
+    font-size: 2rem;
+    font-weight: 850;
+    cursor: pointer;
+    transition: 0.3s ease;
+    text-decoration: none;
+    white-space: nowrap;
+    /* Prevents line breaks */
+}
+
+.logo:hover {
+    transform: scale(1.1);
+}
+
+.logo span {
+    text-shadow: 0 0 25px #7cc4a8;
+    display: inline;
+}
+
 .title {
     /* Centers the text */
     text-align: center;
@@ -40,31 +77,6 @@ body {
 }
 
 /* NAVIGATION SECTION */
-nav {
-    width: 100%;
-    height: 10vh;
-    position: sticky;
-}
-
-.nav-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    /* Centers them horizontally */
-    justify-content: space-around;
-    /* Centers them vertically */
-    align-items: center;
-}
-
-.logo {
-    color: black;
-    font-size: 2rem;
-    font-weight: bolder;
-}
-
-.logo span {
-    color: black;
-}
 
 .nav-container .links {
     display: flex;
@@ -580,7 +592,7 @@ background-color: blue;
 
 ::-webkit-scrollbar-track {
     background-color: #56ac8b;
-
+    width: 50%;
 }
 
 /* PROJECT SECTION */
